--- a/Final/resources/css/style.css
+++ b/Final/resources/css/style.css
@@ -47,3 +47,21 @@ body{
 #btn-submit{
 	height:45px;
 }
+
+.tag {
+    padding: 3px 6px;
+    font-size: 13px;
+    line-height: 27px;
+}
+
+.chip {
+    display: inline-block;
+    height: 32px;
+    font-size: 13px;
+    font-weight: 500;
+    color: rgba(0,0,0,0.6);
+    line-height: 32px;
+    padding: 0 12px;
+    border-radius: 16px;
+    background-color: #E4E4E4;
+}
