--- a/Final/resources/css/style.css
+++ b/Final/resources/css/style.css
@@ -65,3 +65,8 @@ body{
     border-radius: 16px;
     background-color: #E4E4E4;
 }
+.bottom-align-text {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
